; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sol-thread.c_sol_find_new_threads_callback.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sol-thread.c_sol_find_new_threads_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@TD_OK = common dso_local global i32 0, align 4
@inferior_ptid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @sol_find_new_threads_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sol_find_new_threads_callback(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @p_td_thr_get_info(i32* %9, %struct.TYPE_3__* %7)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @TD_OK, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %27

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @inferior_ptid, align 4
  %18 = call i32 @PIDGET(i32 %17)
  %19 = call i32 @BUILD_THREAD(i32 %16, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @in_thread_list(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %14
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @add_thread(i32 %24)
  br label %26

26:                                               ; preds = %23, %14
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %13
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @p_td_thr_get_info(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @BUILD_THREAD(i32, i32) #1

declare dso_local i32 @PIDGET(i32) #1

declare dso_local i32 @in_thread_list(i32) #1

declare dso_local i32 @add_thread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
